stage 3 without checking